--- a/src/components/HomeGrid/HomeGrid.css
+++ b/src/components/HomeGrid/HomeGrid.css
@@ -1,6 +1,12 @@
-
 .left-panel {
     padding: 0;
     border: none;
     margin: 0;
+    min-height: 650px;
+    max-height: 650px;
+}
+
+.right-panel {
+    min-height: 650px;
+    max-height: 650px;
 }
