--- a/src/components/IndvProject/RightPanel/RightPanel.css
+++ b/src/components/IndvProject/RightPanel/RightPanel.css
@@ -1,43 +1,106 @@
-.intro-div {
-    color: black;
+.project-div {
+    max-width: 100%;
+    min-width: 50%;
+    font-family: 'Familjen Grotesk';
     display: flex;
     flex-direction: column;
-    align-items: space-around;
     justify-content: center;
+    align-items: center;
+
 }
 
-.intro-header {
+.button-div {
+    min-width: 100%;
+    display: flex;
+    justify-content: flex-start !important;
+    align-items: flex-start !important;
+}
+
+.back-button {
+    min-width: 100px;
+    margin: 10px;
+    padding: 3px;
+    background-color: black;
+    border: 2px solid white;
+}
+
+.back-button:hover {
+    cursor: pointer;
+}
+
+.button-text {
     font-family: 'Tourney';
-    font-size: 2.2rem;
-    padding: 7% 7%;
-    padding-bottom: 0px;
-    margin: 0;
-}
-
-.text-div {
-    padding: 0% 10%;
-    max-height: 500px;
-}
-
-.home-text {
-    font-family: 'Familjen Grotesk';
-    font-size: 1.2rem;
-    margin-bottom: 0px;
-}
-
-.more-label {
-    font-family: 'Tourney';
-    margin-bottom: 0px;
-}
-
-.learn-more {
-    font-family: 'Familjen Grotesk';
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
+    font-size: 1.4rem;
+    margin: 0;
+    color: white
 }
 
-.more-item {
+.button-text:hover {
+    color: #0091ad;
+}
+
+.header-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding: 50px; */
+    background-color: black;
+    color: white;
+}
+
+.header-img {
+    max-width: 500px;
+    margin-top: 4%;
+    border: 4px solid rgb(255, 255, 255);
+}
+
+.header-title {
+    font-family: 'Tourney';
+    font-size: 2rem;
+    margin-bottom: 1%;
+    background-color: black;
+    color: white;
+}
+
+.description-text {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    font-size: 1.3rem;
+    padding: 0% 10% 3% 10%;
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
+.deploy-link {
+    margin: 0;
     font-size: 1.2rem;
+    padding: 0% 10%;
+    text-align: center;
+}
+.repo-link {
+    margin: 0;
+    font-size: 1.2rem;
+    padding: 0% 10%;
+    text-align: center;
+}
+
+.link-header {
+    margin: 1%;
+}
+
+.live-link {
+    color: #B7094C;
+    text-decoration: none;
+}
+.live-link:hover {
+    color: #0091ad;
 }
