--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,40 @@
 .footer-div {
     margin-top: auto;
+    background-color: black;
+    font-family: 'Familjen Grotesk';
 }
 
 .footer-text {
+    color: white;
     text-align: center;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-h3 {
+    padding: 0;
+    margin: 0;
+}
+
+.footer-credit {
+    padding: 10px 0px;
+}
+
+.footer-link {
+    color: white;
+    text-decoration: none;
+}
+.footer-link:hover {
+    color: #0091ad;
+}
+
+.footnote {
+    color: rgb(124, 124, 124);
+    text-align: center;
+    margin: 0;
+    padding: 5px 0px 10px 0px;
+    font-size: 12px;
 }
