--- a/src/components/SkillsGrid/RightPanel/RightPanel.css
+++ b/src/components/SkillsGrid/RightPanel/RightPanel.css
@@ -30,3 +30,14 @@ font-family: 'Tourney';
     margin: 0.6rem;
     margin-bottom: 1.4rem;
 }
+
+@media only screen and (max-width: 880px) {
+    .skill-type {
+        font-size: 1.4rem;
+    }
+    .skill-content {
+    font-size: 1rem;
+    margin: 0.3rem;
+    margin-bottom: 1rem;
+    }
+}
