--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,8 @@
     background-color: rgb(0, 0, 0);
 }
 
+
+
 .xs-link {
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -24,12 +26,11 @@
 }
 
 .fs-links {
-    
     text-decoration: none;
     font-family: 'Familjen Grotesk';
     font-size: 1.4rem;
     margin: 0px 3px;
-    color: black;
+    color: white;
     border: 3px solid black;
     padding: 5px 10px;
     transition: none;
@@ -43,19 +44,16 @@ button.fs-buttons {
 }
 
 /* these three disappear when clicking elsewhere on page so need handleclick to add class for styling*/
-.fs-links:focus {
-    background-color: rgb(43, 0, 83);
-    color: white;
+.fs-links:hover {
+    color: #0091ad;
 }
 
 .fs-links:active {
-    background-color: rgb(43, 0, 83);
-    color: white;
+    color: #A01A58;
 }
-.fs-links:visited {
-    background-color: rgb(43, 0, 83);
+/* .fs-links:visited {
     color: white;
-}
+} */
 
 
 
